# agentct1

./: .dockerignore  .env.example  .gitignore  Dockerfile.server  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: AuditAnchor.sol
contracts/test/: AuditAnchor.t.sol
crates/agentctl-engine/: Cargo.toml  Dockerfile
crates/agentctl-engine/src/: api.rs  behavioral.rs  lib.rs  main.rs  sig_inspect.rs
crates/agentctl-engine/tests/: http.rs  scratch_repro.rs  scratch_repro2.rs
