[package]
name = "agentctl-engine"
version = "0.1.0"
edition = "2021"
description = "agentctl optional Rust hot-path sidecar: behavioral scoring + signature inspection"

[lib]
name = "agentctl_engine"
path = "src/lib.rs"

[[bin]]
name = "agentctl-engine"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-primitives = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
